--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.4.5",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "babel-jest": "^24.8.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "cypress": "^3.3.2",
+    "cypress": "^3.4.1",
     "electron": "^5.0.6",
     "jest": "^24.8.0",
     "spectron": "^7.0.0",
